--- a/templates/index.js.njk
+++ b/templates/index.js.njk
@@ -1,4 +1,10 @@
 /* This file is generated. Do not edit it. */
+
+/* eslint-disable @typescript-eslint/no-unsafe-return */
+/* eslint-disable functional/functional-parameters */
+/* eslint-disable @typescript-eslint/explicit-module-boundary-types */
+/* eslint-disable prettier/prettier */
+
 {% set effects = [
   'take',
   'takeMaybe',
@@ -32,7 +38,6 @@ import {
   {{ effect }} as raw{{ (effect.slice(0, 1) | upper) ~ effect.slice(1) }},
   {%- endfor %}
 } from "redux-saga/effects";
-
 {% for effect in effects %}
 /* This file is generated. Do not edit it. */
 export function* {{ effect }}(...args) {
